fix scroll issue on ios safari

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,12 @@ html {
   font-family: "Raleway", sans-serif;
 }
 
+.noscroll {
+  overflow: hidden;
+  touch-action: none;
+  -ms-touch-action: none;
+}
+
 .canvas-container {
   width: 100vw;
   height: 100vh;
